# spiceai

./: .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml  go.mod  go.sum  version.txt
.github/ISSUE_TEMPLATE/: end_game.md
.github/workflow_templates/: spiced_docker_nightly.yml
.github/workflows/: build_and_release.yml  e2e_test_ci.yml  e2e_test_release_install_ai.yml  e2e_test_spice_cli.yml  enforce-pulls-with-spice.yml  features.yml  generate-openapi.yml  generate_changelog.yml  integration.yml  integration_data_components.yaml  integration_models.yml  license_check.yml  pr.yml  spiced_docker_nightly.yml  testoperator_dispatch.yml  testoperator_run_bench.yml  testoperator_run_load.yml  testoperator_run_throughput.yml
.schema/: openapi.json  spicepod.schema.json
crates/arrow_sql_gen/: Cargo.toml
crates/data_components/: Cargo.toml
crates/flight_client/: Cargo.toml
crates/iceberg-aws-sdk/: Cargo.toml
crates/iceberg-aws-sdk/src/: credential_provider.rs  lib.rs
crates/llms/: Cargo.toml
crates/object-store-aws-sdk/: Cargo.toml  README.md
crates/package/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime-datafusion-index/: Cargo.toml
crates/runtime-table-partition/: Cargo.toml
crates/runtime-table-partition/src/: creator.rs  expression.rs  insert.rs  lib.rs  provider.rs
crates/runtime-table-partition/src/provider/: pruning.rs
crates/s3_vectors/: Cargo.toml
crates/s3_vectors/src/: lib.rs
crates/s3_vectors_metadata_filter/: Cargo.toml
crates/scheduler/: Cargo.toml  README.md
crates/spicepod/: Cargo.toml
crates/test-framework/: Cargo.toml
crates/util/: Cargo.toml
crates/workers/: Cargo.toml
deploy/chart/: Chart.yaml  values.yaml
docs/: ROADMAP.md
docs/release_notes/: qa_analytics.csv  v1.3.2.md  v1.4.0-rc.1.md  v1.5.0.md  v1.5.1.md  v1.5.2.md
scripts/: generate_changelog.sh
tools/spicepodschema/: Cargo.toml
(+1002 files in other folders)
