[package]
name = "s3_vectors"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-s3vectors = "1.1"
aws-smithy-types.workspace = true

[dev-dependencies]
tokio.workspace = true