[package]
description = "Spice OSS Spicepod schema"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "spicepodschema"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
schemars.workspace = true
serde_json = "1"
spicepod = { path = "../../crates/spicepod", features = ["schemars"] }
